--- a/headwear.html
+++ b/headwear.html
@@ -50,15 +50,16 @@
 	</div>
 <!--End Hero-->
 <!--Filter Toggle-->
-	<div class="filter-area">
+	<div class="small-screen-filter-title">Headwear</div>
+	<div class="filter-header-area">
 		<div class="filter-title">
 			Headwear
 		</div>
 		<div class="filter-style">
 			Style
-			<img src="assets/images/hats/1.jpg" class="filter-hat">
-			<img src="assets/images/hats/2.jpg" class="filter-hat">
-			<img src="assets/images/hats/3.jpg" class="filter-hat">
+			<img src="assets/images/hats/1.jpg" class="filter-hat caps no-hat-opacity">
+			<img src="assets/images/hats/2.jpg" class="filter-hat winter-hats hat-opacity">
+			<img src="assets/images/hats/3.jpg" class="filter-hat hat-gear hat-opacity">
 		</div>
 		<div class="filter-color">
 			Color
@@ -70,9 +71,360 @@
 			<button class="color-swatch swatch6"></button>
 		</div>
 		<div class="format-toggle">
-			Shop By Product Shop By Look
+			Shop By Product
+			<li class="toggle-button">
+				<ul class="product"></ul>
+				<ul class="look"></ul>
+			</li> 
+			Shop By Look
 		</div>
 	</div>
+<!--Filter Area-->
+	<div class="filter-area">
+		<div class="filter-area-vertical-scroller">
+			<div class="vertical-scroll">
+				<!--Row 1-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/4.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Hat Name
+							<div class="card-price">
+								$20
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/5.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 2-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/6.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Tight Loose
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/7.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Mountain
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 3-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/9.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Classic Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/8.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 4-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/10.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/11.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 5-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/12.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/13.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 6-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/14.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/15.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 7-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/16.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/17.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 8-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/18.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/19.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 9-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/20.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/21.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				<!--Row 10-->
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/22.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Dad Hat
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/images/hats/24.png" alt="Hat" class="card-image-source">
+						</div>
+						<div class="card-description">
+							description
+						</div>
+						<div class="card-name">
+							Leather Patch
+							<div class="card-price">
+								$30
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	<!--Filter Preview-->
+		<div class="filter-preview">
+			<div class="preview-information">
+				<img src="assets/images/info.png" alt="Info" class="info">
+			</div>
+		</div>
+	<!--End Filter Preview-->
+	</div>
 <!--End Filter Toggle-->
+<!--On the Blog-->
+	<div class="blog-title">On the Blog</div>
+	<div class="scrollarea-headwear">
+		<div class="scrollable2-headwear">
+			<div class="col-md-2 scroll2-element3 blog-post">
+				<img src="assets/images/blogpost1.jpg" alt="Blog Post" class="blogpost-img">
+				<div class="blogpost-background"></div>
+				<div class="onRoad">on the road</div>
+				<div class="blog-author">post author</div>
+				<div class="blog-date">01.08.2018</div>
+				<div class="blog-subtitle">TGR Sunglasses Hit the Field:</br>Here's What People Say</div>
+				<div class="blog-description">Anyone who has ever skied or snowboarded Jackson Hole<br> knows just how nerve-racking it can be to send it into the<br> infamous Corbet's Couloir, even in the best of conditions.
+				</div>
+			</div>
+			<div class="col-md-2 scroll2-element3 blog-post">
+				<img src="assets/images/category-highlight.jpg" alt="Ian McIntosh" class="blogpost-img">
+				<div class="blogpost-background"></div>
+				<div class="onRoad">on the road</div>
+				<div class="blog-author">post author</div>
+				<div class="blog-date">01.08.2018</div>
+				<div class="blog-subtitle">How the Sunset Inspired Our</br>Newest Collection</div>
+				<div class="blog-description">Anyone who has ever skied or snowboarded Jackson Hole<br> knows just how nerve-racking it can be to send it into the<br> infamous Corbet's Couloir, even in the best of conditions.
+				</div>
+			</div>
+			<div class="col-md-2 scroll2-element3 blog-post">
+				<img src="assets/images/casey-callahan-642297-unsplash2.jpg" alt="Sage" class="blogpost-img">
+				<div class="blogpost-background"></div>
+				<div class="onRoad">on the road</div>
+				<div class="blog-author">post author</div>
+				<div class="blog-date">01.08.2018</div>
+				<div class="blog-subtitle">Bike Jerseys Have Arrived</div>
+				<div class="blog-description">Anyone who has ever skied or snowboarded Jackson Hole<br> knows just how nerve-racking it can be to send it into the<br> infamous Corbet's Couloir, even in the best of conditions.
+				</div>
+			</div>
+		</div>
+	</div>
+<!--End On the Blog-->
+<!--JQuery-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.2/js/swiper.js"></script>
+	<script title="text/javascript" src="assets/js/main.js"></script>
+<!--End JQuery-->
 </body>
 </html>
