--- a/headwear.html
+++ b/headwear.html
@@ -57,7 +57,7 @@
 		</div>
 		<div class="filter-style">
 			Style
-			<img src="assets/images/hats/1.jpg" class="filter-hat caps no-hat-opacity">
+			<img src="assets/images/hats/1.jpg" class="filter-hat caps">
 			<img src="assets/images/hats/2.jpg" class="filter-hat winter-hats hat-opacity">
 			<img src="assets/images/hats/3.jpg" class="filter-hat hat-gear hat-opacity">
 		</div>
@@ -70,15 +70,16 @@
 			<button class="color-swatch swatch5"></button>
 			<button class="color-swatch swatch6"></button>
 		</div>
-		<div class="format-toggle">
-			Shop By Product
+		<div>
+			<button class="format-toggle-product">Shop By Product</button>
 			<li class="toggle-button">
 				<ul class="product"></ul>
 				<ul class="look"></ul>
 			</li> 
-			Shop By Look
+			<button class="format-toggle-look">Shop By Look</button>
 		</div>
 	</div>
+<!--End Filter Toggle-->
 <!--Filter Area-->
 	<div class="filter-area">
 		<div class="filter-area-vertical-scroller">
@@ -378,7 +379,40 @@
 	<!--Filter Preview-->
 		<div class="filter-preview">
 			<div class="preview-information">
-				<img src="assets/images/info.png" alt="Info" class="info">
+				<div class="preview-box">
+					<img src="assets/images/info.png" alt="Info" class="info">
+				</div>
+				<div class="preview-box opacity">
+					<img src="assets/images/hats/4.png" alt="Image Preview" class="boxed-img">
+				</div>
+				<div class="preview-box opacity">
+					<img src="assets/images/IMG_4411_2.jpg" alt="Image Preview" class="boxed-lifstyle">
+				</div>
+			</div>
+			<div class="hat-details">
+				<div class="details-title">Hat Name
+				</div>
+				<div class="details-fit">Fit
+					<div class="fit-para">Spread the stoke and live the dream as a part of the TGR Ambassador program. Spread the stoke and live the dream as a part of the TGR Ambassador program. Spread the stoke and live the dream as a part of the TGR Ambassador program. Spread the stoke and live the dream as a part of the TGR Ambassador program.
+					</div>
+				</div>
+				<div class="details-materials">Materials
+					<div class="materials-para">Spread the stoke and live the dream as a part of the TGR Ambassador program. Spread the stoke and live the dream as a part of the TGR Ambassador program. Spread the stoke and live the dream as a part of the TGR Ambassador program.
+					</div>
+				</div>
+			</div>
+			<div class="preview-footer">
+				<div class="color-holder">
+					<button class="preview-color black"></button>
+					<button class="preview-color green"></button>
+				</div>
+					<div class="preview-quantity">Quantity</div>
+				<div class="quantity-holder">
+					<button class="preview-remove"><i class="material-icons preview-remove">remove</i></button>
+
+					<button class="preview-remove"><i class="material-icons preview-remove">add</i></button>
+				</div>
+					<button class="done">Done!</button>
 			</div>
 		</div>
 	<!--End Filter Preview-->
@@ -421,6 +455,157 @@
 		</div>
 	</div>
 <!--End On the Blog-->
+<!--Section Five-->
+	<div class="social-headwear">Go Social
+		<p class="social-nav1">Become an Ambassador</p>
+		<p class="social-nav2">#WearTheDream</p>
+		<p class="social-nav3">@TGRShop</p>
+	</div><!-- Swiper -->
+  	<div class="swiper-container swiper-headwear">
+	    <div class="swiper-wrapper">
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+				<img src="assets/images/tim-profile.jpg" alt="Social Profile" class="social-profile">
+				<div class="social-name">Tim Durtschi</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">02.16.2018</div>
+			</div>
+			<img src="assets/images/tim-photo.png" alt="Social post" class="social-picture">
+	      </div>
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/facebook-color.png" alt="Facebook" class="facebookincolor">
+				<img src="assets/images/jeremy-profile.jpg" alt="Social Profile" class="social-profile">
+				<div class="social-name">Jeremy Jones</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">02.04.2018</div>
+			</div>
+			<img src="assets/images/jeremy-post.jpg" alt="Social Post" class="social-picture">
+	      </div>
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/facebook-color.png" alt="Facebook" class="facebookincolor">
+				<img src="assets/images/johnny-profile.jpg" alt="Social Profile" class="social-profile">
+				<div class="social-name">Johnny Collinson</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">02.06.2018</div>
+			</div>
+			<img src="assets/images/johnny-post.jpg" alt="Social Post" class="social-picture">
+	      </div>
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+				<img src="assets/images/angel-profile.jpg" alt="Social Profile" class="social-profile">
+				<div class="social-name">Angel Collinson</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">01.14.2018</div>
+			</div>
+			<img src="assets/images/angel-picture.jpg" alt="Social Post" class="social-picture">
+	      </div>
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+				<img src="assets/images/casey-callahan-642297-unsplash.jpg" alt="Social Profile" class="social-profile">
+				<div class="social-name">Kayla Krane</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">01.14.2018</div>
+			</div>
+			<img src="assets/images/Screen Shot 2018-02-23 at 3_resized.png" alt="Social Post" class="social-picture">
+	      </div>
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+				<img src="assets/images/738A0554.JPG" alt="Social Profile" class="social-profile">
+				<div class="social-name">Dane Tudor</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">01.14.2018</div>
+			</div>
+			<img src="assets/images/738A0508.JPG" alt="Social Post" class="social-picture">
+	      </div>
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+				<img src="assets/images/videoreplace copy.jpg" alt="Social Profile" class="social-profile">
+				<div class="social-name">Dan McMan</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">01.14.2018</div>
+			</div>
+			<img src="assets/images/Screen Shot 2018-02-23 at 3.11.12 PM.png" alt="Social Post" class="social-picture">
+	      </div>
+	      <div class="swiper-slide">
+	      	<div class="social-topper">
+		      	<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+				<img src="assets/images/angel-profile.jpg" alt="Social Profile" class="social-profile">
+				<div class="social-name">Elena Hight</div>
+				<div class="social-posted">posted a photo</div>
+				<div class="social-date">01.14.2018</div>
+			</div>
+			<img src="assets/images/@nickkalisz_DSC06789 2.jpg" alt="Social Post" class="social-picture">
+	      </div>
+    	</div>
+	    <!-- Add Pagination -->
+	    <div class="swiper-pagination"></div>
+	    <!-- Add Arrows -->
+	    <div class="swiper-button-next"></div>
+	    <div class="swiper-button-prev"></div>
+  	</div>
+<!--End Section Five-->
+<!--Footer-->
+	<div class="headwear-footer">
+		<div class="phone-number-footer">(307)734-8192
+			<div class="address-footer">45 W Broadway St.<br>Jackson, WY 83001</div>
+		</div>
+		<div class="days-footer">weekdays<br>saturday<br>sunday</div>
+		<div class="hours-footer">9am-6pm<br>12pm-6pm<br>closed</div>
+		<div class="images-footer">
+			<img src="assets/images/logowhite.png" alt="Footer Logo" class="headwear-footer-logo">
+			<div class="social-area-footer">
+				<img src="assets/images/instagram.png" alt="Instagram" class="social-in-footer">
+				<img src="assets/images/facebook-logo.png" alt="Facebook" class="social-in-footer">
+				<img src="assets/images/vimeo-logo.png" alt="Vimeo" class="social-in-footer">
+				<img src="assets/images/twitter-logo-silhouette.png" alt="Twitter" class="social-in-footer">
+			</div>
+		</div>
+		<div class="hours-footer right-side end">9am-6pm<br>12pm-6pm<br>closed</div>
+		<div class="days-footer right-side end">weekdays<br>saturday<br>sunday</div>
+		<div class="phone-number-footer right-side">(307)734-8192
+			<div class="address-footer right-side">45 W Broadway St.<br>Jackson, WY 83001</div>
+		</div>
+	</div>
+	<div class="images-footer2">
+		<img src="assets/images/logowhite.png" alt="Footer Logo" class="headwear-footer-logo">
+		<div class="social-area-footer">
+			<img src="assets/images/instagram.png" alt="Instagram" class="social-in-footer">
+			<img src="assets/images/facebook-logo.png" alt="Facebook" class="social-in-footer">
+			<img src="assets/images/vimeo-logo.png" alt="Vimeo" class="social-in-footer">
+			<img src="assets/images/twitter-logo-silhouette.png" alt="Twitter" class="social-in-footer">
+		</div>
+	</div>
+
+<!--End Footer-->
+<!--Footer-->
+<!--
+	<div class="footer-headwear">
+		<div class="col-md-4">
+			<div class="phone-number">(307)734-8192</div>
+			<div class="address">45 W Broadway St.</br>Jackson, WY 83001</div>
+			<div class="days-of-week">weekdays&nbsp;&nbsp;9am - 6pm</br>saturday&nbsp;&nbsp;12pm - 6pm</br>sunday&nbsp;&nbsp;&nbsp; closed</div>
+		</div>
+		<div class="col-md-4">
+			<img src="assets/images/logowhite.png" alt="Footer Logo" class="footer-logo">
+			<img src="assets/images/instagram.png" alt="Instagram" class="instagram">
+			<img src="assets/images/facebook-logo.png" alt="Facebook" class="facebook">
+			<img src="assets/images/vimeo-logo.png" alt="Vimeo" class="vimeo">
+			<img src="assets/images/twitter-logo-silhouette.png" alt="Twitter" class="twitter">
+		</div>
+		<div class="col-md-4">
+			<div class="phone-number two">(307)734-8192</div>
+			<div class="address2">1260 West St.</br>Wilson, WY 83001</div>
+			<div class="days-of-week-two">weekdays&nbsp;&nbsp;9am - 6pm</br>saturday&nbsp;&nbsp;12pm - 6pm</br>sunday&nbsp;&nbsp;&nbsp; closed</div>
+		</div>
+	</div> -->
+<!--End Footer-->
 <!--JQuery-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.2/js/swiper.js"></script>
