--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
 <!--Header-->
 	<div class="logo">
         <div class="row">
@@ -237,7 +236,7 @@
 				</div>
 				<div class="email-attention">Be the first to know.</div>
 				<div class="stay-updated">Stay updated with the latest ticket & merch sales.</div>
-				<input type="text" name="emailAddress" value="Email Address"> 
+				<input type="text" name="emailAddress" value="Email Address" class="email-inScroll"> 
 				<button class="email">Subscribe<i class="material-icons lookbook-arrow">&#xe5c8;</i></button>
 
 			</div>
@@ -346,7 +345,6 @@
 	</div>
 		
 <!--End Section Four-->
-
 <!--Section Five-->
 	<div class="social">Go Social
 		<p class="social-nav1">Become an Ambassador</p>
